udl/test/corpus/class-extends.txt
===
Multiple Extends
===
Class User.MySubclass Extends (%Library.Persistent, %Library.Populate)
{
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_extends
      (keyword_extends)
      (class_name
        (identifier))
      (class_name
        (identifier)))
    (class_body)))

===
Extends Defined class
===
Class MyApp.Employee Extends Person
{
Property Salary As %Integer;
Property Department As %String;
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_extends
      (keyword_extends)
      (class_name
        (identifier)))
    (class_body
      (class_statement
        (property
          (keyword_property)
          (property_name
            (identifier))
          (return_type
            (keyword_as)
            (typename
              (identifier)))))
      (class_statement
        (property
          (keyword_property)
          (property_name
            (identifier))
          (return_type
            (keyword_as)
            (typename
              (identifier))))))))

===
Extends Persistent
===
/// This sample persistent class represents a person.
Class MyApp.Person Extends %Persistent [ SqlTableName = MyAppPerson ]
{

/// Define a unique index for the SSN property.
Index SSNKey On SSN [ Unique ];

/// Name of the person.
Property Name As %String [ Required ];

/// Person's Social Security number.
Property SSN As %String(PATTERN = "3N1""-""2N1""-""4N") [ Required ];

}
---

(source_file
  (documatic_line)
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_extends
      (keyword_extends)
      (class_name
        (identifier)))
    (class_keyword
      (query_name))
    (class_body
      (documatic_line)
      (class_statement
        (index
          (keyword_index)
          (index_name
            (identifier))
          (keyword_on)
          (index_property_value
            (property_name
              (identifier)))
          (index_keywords
            (index_keyword))))
      (documatic_line)
      (class_statement
        (property
          (keyword_property)
          (property_name
            (identifier))
          (return_type
            (keyword_as)
            (typename
              (identifier)))
          (property_keywords
            (property_keyword))))
      (documatic_line)
      (class_statement
        (property
          (keyword_property)
          (property_name
            (identifier))
          (return_type
            (keyword_as)
            (typename
              (identifier)
              (identifier)
              (string_literal)))
          (property_keywords
            (property_keyword)))))))

===
Parent and Child Tables
===
Class Sample.Invoice Extends %Persistent 
{
  Property Buyer As %String(MAXLEN=50) [Required];
  Property InvoiceDate As %TimeStamp;
  Relationship Pchildren AS Sample.LineItem [ Cardinality = children, Inverse = Cparent ];
}
---

(source_file
  (class_definition
    (keyword_class)
    (class_name
      (identifier))
    (class_extends
      (keyword_extends)
      (class_name
        (identifier)))
    (class_body
      (class_statement
        (property
          (keyword_property)
          (property_name
            (identifier))
          (return_type
            (keyword_as)
            (typename
              (identifier)
              (identifier)
              (numeric_literal)))
          (property_keywords
            (property_keyword))))
      (class_statement
        (property
          (keyword_property)
          (property_name
            (identifier))
          (return_type
            (keyword_as)
            (typename
              (identifier)))))
      (class_statement
        (relationship
          (keyword_relationship)
          (relationship_name
            (identifier))
          (return_type
            (keyword_as)
            (typename
              (identifier)))
          (relationship_keywords
            (relationship_keyword
              (typename))
            (relationship_keyword
              (variable_datatype
                (typename
                  (objectscript_identifier))))))))))
